# jrl-qp

./: .clang-format  .clang-format-check.sh  .clang-format-common.sh  .clang-format-fix.sh  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  _config.yml  readme.md
.github/workflows/: build.yml  package.yml
benchmarks/: BasicEigen.cpp  BoxAndSingleConstraintSolver.cpp  CMakeLists.txt  Decomposition.cpp  LinearSystemSolving.cpp  SolverPreDecomposition.cpp  Solvers.cpp  SolversWarmStart.cpp  common.h  eiquadprog.hpp  generatePlot.py  plot.py  problemAdaptors.cpp  problemAdaptors.h
c++/: CMakeLists.txt
c++/benchmarks/: BasicEigen.cpp  CMakeLists.txt  CmakeLists.txt  LinearSystemSolving.cpp  Solvers.cpp  common.h  problemAdaptors.cpp
c++/include/jrl-qp/: DualSolver.h  GoldfarbIdnaniSolver.h  SolverOptions.h  api.h  defs.h  enums.h
c++/include/jrl-qp/experimental/: BoxAndSingleConstraintSolver.h
c++/include/jrl-qp/internal/: ActiveSet.h  ConstraintNormal.h  TerminationType.h  Workspace.h  memoryChecks.h  meta.h
c++/include/jrl-qp/test/: kkt.h  problems.h  randomMatrices.h  randomProblems.h
c++/include/jrl-qp/utils/: Logger.h  debug.h  toMatlab.h
c++/src/: CMakeLists.txt  DualSolver.cpp  GoldfarbIdnaniSolver.cpp  SolverOptions.cpp
c++/src/experimental/: BoxAndSingleConstraintSolver.cpp
c++/src/internal/: ActiveSet.cpp  memoryChecks.cpp
c++/src/test/: kkt.cpp  randomProblems.cpp
c++/src/utils/: Logger.cpp
c++/tests/: ActiveSetTest.cpp  BoxAndSingleConstraintSolverTest.cpp  CMakeLists.txt  GoldfarbIdnaniSolverTest.cpp  QPSReader.cpp  QPSReader.h  RandomProblemsTest.cpp  main.cpp  utils.cpp  utils.h
debian/: changelog  control  copyright  libjrl-qp-dev.install  libjrl-qp-doc.doc-base  libjrl-qp-doc.lintian-overrides  libjrl-qp.install  rules  source.lintian-overrides
doxygen/HEAD/: ActiveSet_8cpp.html  ActiveSet_8cpp.js  ActiveSet_8cpp__incl.dot  ActiveSet_8cpp__incl.md5  ActiveSet_8h.html  ActiveSet_8h.js  ActiveSet_8h__dep__incl.dot  ActiveSet_8h__dep__incl.md5  ActiveSet_8h__incl.dot  ActiveSet_8h__incl.md5  ActiveSet_8h_source.html  BlockGISolver_8cpp.html  BlockGISolver_8cpp__incl.dot  BlockGISolver_8h.html  BlockGISolver_8h__dep__incl.dot  BlockGISolver_8h__incl.dot  BlockGISolver_8h_source.html  BoxAndSingleConstraintSolver_8cpp.html  BoxAndSingleConstraintSolver_8cpp.js  BoxAndSingleConstraintSolver_8cpp__incl.dot  BoxAndSingleConstraintSolver_8cpp__incl.md5  BoxAndSingleConstraintSolver_8h.html  BoxAndSingleConstraintSolver_8h.js  BoxAndSingleConstraintSolver_8h__dep__incl.dot  BoxAndSingleConstraintSolver_8h__dep__incl.md5  BoxAndSingleConstraintSolver_8h__incl.dot  BoxAndSingleConstraintSolver_8h__incl.md5  BoxAndSingleConstraintSolver_8h_source.html  ConstraintNormal_8h.html  ConstraintNormal_8h__dep__incl.dot  ConstraintNormal_8h__dep__incl.md5  ConstraintNormal_8h__incl.dot  ConstraintNormal_8h__incl.md5  ConstraintNormal_8h_source.html  DualSolver_8cpp.html  DualSolver_8cpp__incl.dot  DualSolver_8cpp__incl.md5  DualSolver_8h.html  DualSolver_8h__dep__incl.dot  DualSolver_8h__dep__incl.md5  (+580 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+95 more)
include/jrl-qp/: DualSolver.h  GoldfarbIdnaniSolver.h  SolverOptions.h  api.h  defs.h  enums.h
include/jrl-qp/decomposition/: blockArrowLLT.h  triBlockDiagLLT.h
include/jrl-qp/experimental/: BlockGISolver.h  BoxAndSingleConstraintSolver.h  GoldfarbIdnaniSolver.h
include/jrl-qp/internal/: ActiveSet.h  ConstraintNormal.h  OrthonormalSequence.h  SelectedConstraint.h  SingleNZSegmentVector.h  TerminationType.h  Workspace.h  memoryChecks.h  meta.h
include/jrl-qp/structured/: StructuredC.h  StructuredG.h  StructuredJ.h  StructuredJR.h  StructuredQR.h
include/jrl-qp/test/: kkt.h  problems.h  randomMatrices.h  randomProblems.h
include/jrl-qp/utils/: Logger.h  debug.h  enumsIO.h  toMatlab.h
matlab/: ActivationStatus.m  BasicQP.m  DoubleSidedQP.m  DualQPSolver.m  GoldfarbIdaniQP.m  SolverStatus.m
notes/: DualQP notes.tex  bib.bib
src/: CMakeLists.txt  DualSolver.cpp  GoldfarbIdnaniSolver.cpp  SolverOptions.cpp
src/decomposition/: blockArrowLLT.cpp  triBlockDiagLLT.cpp
src/experimental/: BlockGISolver.cpp  BoxAndSingleConstraintSolver.cpp  GoldfarbIdnaniSolver.cpp
src/internal/: ActiveSet.cpp  OrthonormalSequence.cpp  memoryChecks.cpp
src/structured/: StructuredC.cpp  StructuredG.cpp  StructuredJ.cpp  StructuredJR.cpp  StructuredQR.cpp
src/test/: kkt.cpp  problems.cpp  randomProblems.cpp
src/utils/: Logger.cpp  enumsIO.cpp
tests/: ActiveSetTest.cpp  BlockGISolverTest.cpp  BlockGISolverTest.in.cpp  BoxAndSingleConstraintSolverTest.cpp  CMakeLists.txt  GoldfarbIdnaniSolverTest.cpp  IKmatReader.cpp  IKmatReader.h  InternalTest.cpp  OptionsTest.cpp  QPSProblems.h  QPSReader.cpp  QPSReader.h  RandomProblemsTest.cpp  StructuredTest.cpp  blockArrowLLTTest.cpp  main.cpp  triBlockDiagLLTTest.cpp
tests/doctest/: doctest.h
